fix: Terms of service

--- a/otto/termsofservice/en/index.html
+++ b/otto/termsofservice/en/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Términos de Servicio – Otto</title>
-  <meta name="description" content="Términos de Servicio de la aplicación Otto (iOS y Android). Suscripciones, periodo de prueba, privacidad y responsabilidades." />
+  <title>Terms of Service – Otto</title>
+  <meta name="description" content="Otto app Terms of Service (iOS and Android). Subscriptions, free trial, privacy and responsibilities." />
   <meta name="robots" content="index,follow" />
-  <meta property="og:title" content="Términos de Servicio – Otto" />
-  <meta property="og:description" content="Términos de Servicio de la aplicación Otto (iOS y Android)." />
+  <meta property="og:title" content="Terms of Service – Otto" />
+  <meta property="og:description" content="Otto app Terms of Service (iOS and Android)." />
   <meta property="og:type" content="article" />
   <style>
     :root {
@@ -81,90 +81,90 @@
 </head>
 <body>
   <header>
-    <h1>Términos de Servicio</h1>
-    <p class="muted">Aplicación Otto (iOS y Android)</p>
+    <h1>Terms of Service</h1>
+    <p class="muted">Otto App (iOS and Android)</p>
   </header>
 
   <main>
     <article>
-      <section id="sobre-la-app">
-        <h2>1. Sobre la aplicación</h2>
-        <p>Otto es una aplicación disponible para dispositivos iOS y Android, con funcionalidades accesibles mediante registro y, en algunos casos, suscripción de pago.</p>
+      <section id="about-app">
+        <h2>1. About the App</h2>
+        <p>Otto is an app available for iOS and Android devices, with features accessible through account registration and, in some cases, paid subscription.</p>
       </section>
 
-      <section id="registro-y-cuenta">
-        <h2>2. Registro y Cuenta de Usuario</h2>
-        <p>Para usar Otto, el usuario debe crear una cuenta proporcionando nombre, correo electrónico y contraseña.</p>
+      <section id="account">
+        <h2>2. User Registration and Account</h2>
+        <p>To use Otto, users must create an account by providing their name, email, and password.</p>
         <ul>
-          <li>El usuario es responsable de mantener la confidencialidad de sus credenciales.</li>
-          <li>Está prohibido compartir la cuenta con terceros.</li>
-          <li>El usuario debe proporcionar información verdadera y actualizada.</li>
+          <li>Users are responsible for keeping their credentials confidential.</li>
+          <li>Sharing accounts with third parties is not allowed.</li>
+          <li>Users must provide accurate and up-to-date information.</li>
         </ul>
       </section>
 
-      <section id="suscripciones-y-pagos">
-        <h2>3. Suscripciones, Periodo de Prueba y Pagos</h2>
+      <section id="subscriptions-payments">
+        <h2>3. Subscriptions, Free Trial and Payments</h2>
         <ul>
-          <li>Otto ofrece funcionalidades mediante suscripción in-app.</li>
-          <li>El usuario tiene derecho a un periodo de prueba de 2 (dos) meses desde la fecha de registro, tras el cual será necesaria la suscripción.</li>
-          <li>Las suscripciones son procesadas y gestionadas directamente por Apple App Store (iOS) y Google Play Store (Android).</li>
-          <li>La renovación de la suscripción es automática, salvo que el usuario la cancele a través de Apple o Google antes de la próxima facturación.</li>
-          <li>Otto no realiza cobros directos y no tiene acceso a la información de pago del usuario.</li>
+          <li>Otto provides certain features through in-app subscriptions.</li>
+          <li>Users are entitled to a 2-month free trial starting from the registration date, after which a subscription will be required.</li>
+          <li>Subscriptions are processed and managed directly by the Apple App Store (for iOS devices) and Google Play Store (for Android devices).</li>
+          <li>Subscriptions renew automatically unless canceled by the user through Apple or Google before the next billing date.</li>
+          <li>Otto does not charge users directly and does not have access to their payment information.</li>
         </ul>
       </section>
 
-      <section id="cancelacion">
-        <h2>4. Política de Cancelación</h2>
-        <p>El usuario puede cancelar su suscripción en cualquier momento desde la configuración de App Store o Google Play. La cancelación no implica reembolso de pagos ya realizados, salvo disposición contraria de las tiendas.</p>
+      <section id="cancellation">
+        <h2>4. Cancellation Policy</h2>
+        <p>Users may cancel their subscription at any time in the App Store or Google Play settings. Cancellation does not imply a refund for amounts already charged, unless otherwise determined by the respective stores.</p>
       </section>
 
-      <section id="privacidad">
-        <h2>5. Privacidad y Datos Personales</h2>
+      <section id="privacy">
+        <h2>5. Privacy and Personal Data</h2>
         <ul>
-          <li>Otto solo recopila nombre, correo electrónico y contraseña para crear y gestionar la cuenta del usuario.</li>
-          <li>La aplicación no realiza seguimiento, ni accede a la cámara o ubicación del dispositivo.</li>
-          <li>Los datos se tratan conforme a nuestra Política de Privacidad.</li>
+          <li>Otto only collects name, email, and password to create and manage the user’s account.</li>
+          <li>The app does not track users, nor does it access device camera or location.</li>
+          <li>Data is processed in accordance with our Privacy Policy.</li>
         </ul>
       </section>
 
-      <section id="derechos-y-responsabilidades">
-        <h2>6. Derechos y Responsabilidades</h2>
+      <section id="responsibilities">
+        <h2>6. User Rights and Responsibilities</h2>
         <ul>
-          <li>El usuario se compromete a usar Otto de manera legal y conforme a estos Términos.</li>
-          <li>Está prohibido usar la aplicación para actividades ilegales, abusivas o que puedan comprometer el funcionamiento del servicio.</li>
-          <li>Otto se reserva el derecho de suspender o cerrar cuentas que violen estos Términos.</li>
+          <li>Users agree to use Otto lawfully and in accordance with these Terms.</li>
+          <li>It is prohibited to use the app for illegal, abusive, or disruptive activities.</li>
+          <li>Otto reserves the right to suspend or terminate accounts that violate these Terms.</li>
         </ul>
       </section>
 
-      <section id="limitacion-de-responsabilidad">
-        <h2>7. Limitación de Responsabilidad</h2>
-        <p>Otto se proporciona “tal como está”. No garantizamos funcionamiento ininterrumpido ni libre de errores. En la máxima medida permitida por la ley, no nos hacemos responsables por daños derivados del uso o imposibilidad de uso de la aplicación.</p>
+      <section id="liability">
+        <h2>7. Limitation of Liability</h2>
+        <p>Otto is provided “as is.” We do not guarantee uninterrupted or error-free operation. To the maximum extent permitted by law, we are not liable for damages resulting from the use or inability to use the app.</p>
       </section>
 
-      <section id="cambios">
-        <h2>8. Cambios en los Términos</h2>
-        <p>Podemos actualizar estos Términos de Servicio periódicamente. En caso de cambios relevantes, notificaremos a los usuarios mediante la aplicación o el correo electrónico registrado.</p>
+      <section id="changes">
+        <h2>8. Changes to the Terms</h2>
+        <p>We may update these Terms of Service periodically. In case of significant changes, users will be notified through the app or the registered email address.</p>
       </section>
 
-      <section id="legislacion-aplicable">
-        <h2>9. Legislación Aplicable</h2>
-        <p>Estos Términos se rigen exclusivamente por la legislación de la República Federativa del Brasil.</p>
+      <section id="governing-law">
+        <h2>9. Governing Law</h2>
+        <p>These Terms are governed exclusively by the laws of the Federative Republic of Brazil.</p>
       </section>
 
-      <section id="contacto">
-        <h2>10. Responsable y Contacto</h2>
-        <p>Otto es responsabilidad de una persona física.<br/>
-        Para dudas o solicitudes relacionadas con estos Términos, contacte a: <a href="mailto:otto.fliper.studios@gmail.com">otto.fliper.studios@gmail.com</a></p>
+      <section id="contact">
+        <h2>10. Contact Information</h2>
+        <p>Otto is operated by an individual.<br/>
+        For questions or requests related to these Terms, please contact us at: <a href="mailto:otto.fliper.studios@gmail.com">otto.fliper.studios@gmail.com</a></p>
       </section>
 
       <hr style="border: 0; border-top: 1px solid var(--border); margin: 20px 0;" />
 
-      <p class="muted">Última actualización: 24 de agosto de 2025</p>
+      <p class="muted">Last updated: August 24, 2025</p>
     </article>
   </main>
 
   <footer>
-    © Otto — Términos de Servicio
+    © Otto — Terms of Service
   </footer>
 </body>
 </html>
