--- a/otto/termsofservice/es/index.html
+++ b/otto/termsofservice/es/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="es">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Termos de Uso – Otto</title>
-  <meta name="description" content="Termos de Uso do aplicativo Otto (iOS e Android). Assinaturas, período gratuito, privacidade e responsabilidades." />
+  <title>Términos de Servicio – Otto</title>
+  <meta name="description" content="Términos de Servicio de la aplicación Otto (iOS y Android). Suscripciones, periodo de prueba, privacidad y responsabilidades." />
   <meta name="robots" content="index,follow" />
-  <meta property="og:title" content="Termos de Uso – Otto" />
-  <meta property="og:description" content="Termos de Uso do aplicativo Otto (iOS e Android)." />
+  <meta property="og:title" content="Términos de Servicio – Otto" />
+  <meta property="og:description" content="Términos de Servicio de la aplicación Otto (iOS y Android)." />
   <meta property="og:type" content="article" />
   <style>
     :root {
-      --bg: #0b0c10;      /* fundo escuro */
-      --card: #12141a;    /* cartão */
-      --text: #e6e6e6;    /* texto principal */
-      --muted: #b9bec7;   /* texto suave */
-      --accent: #6ea8fe;  /* realces/links */
-      --border: #1f2530;  /* bordas */
+      --bg: #0b0c10;
+      --card: #12141a;
+      --text: #e6e6e6;
+      --muted: #b9bec7;
+      --accent: #6ea8fe;
+      --border: #1f2530;
     }
     * { box-sizing: border-box; }
     html, body { height: 100%; }
@@ -81,90 +81,90 @@
 </head>
 <body>
   <header>
-    <h1>Termos de Uso</h1>
-    <p class="muted">Aplicativo Otto (iOS e Android)</p>
+    <h1>Términos de Servicio</h1>
+    <p class="muted">Aplicación Otto (iOS y Android)</p>
   </header>
 
   <main>
     <article>
-      <section id="sobre-o-aplicativo">
-        <h2>1. Sobre o aplicativo</h2>
-        <p>O Otto é um aplicativo disponível para dispositivos iOS e Android, com funcionalidades acessíveis mediante cadastro e, em alguns casos, assinatura paga.</p>
+      <section id="sobre-la-app">
+        <h2>1. Sobre la aplicación</h2>
+        <p>Otto es una aplicación disponible para dispositivos iOS y Android, con funcionalidades accesibles mediante registro y, en algunos casos, suscripción de pago.</p>
       </section>
 
-      <section id="cadastro-e-conta">
-        <h2>2. Cadastro e Conta do Usuário</h2>
-        <p>Para utilizar o Otto, o usuário deve criar uma conta informando nome, e-mail e senha.</p>
+      <section id="registro-y-cuenta">
+        <h2>2. Registro y Cuenta de Usuario</h2>
+        <p>Para usar Otto, el usuario debe crear una cuenta proporcionando nombre, correo electrónico y contraseña.</p>
         <ul>
-          <li>O usuário é responsável por manter a confidencialidade de suas credenciais.</li>
-          <li>É proibido compartilhar a conta com terceiros.</li>
-          <li>O usuário deve fornecer informações verdadeiras e atualizadas.</li>
+          <li>El usuario es responsable de mantener la confidencialidad de sus credenciales.</li>
+          <li>Está prohibido compartir la cuenta con terceros.</li>
+          <li>El usuario debe proporcionar información verdadera y actualizada.</li>
         </ul>
       </section>
 
-      <section id="assinaturas-e-pagamentos">
-        <h2>3. Assinaturas, Período Gratuito e Pagamentos</h2>
+      <section id="suscripciones-y-pagos">
+        <h2>3. Suscripciones, Periodo de Prueba y Pagos</h2>
         <ul>
-          <li>O Otto oferece funcionalidades mediante assinatura in-app.</li>
-          <li>O usuário tem direito a um período gratuito de 2 (dois) meses a partir da data de registro, após o qual será necessária a contratação da assinatura.</li>
-          <li>As assinaturas são processadas e gerenciadas diretamente pela Apple App Store (para dispositivos iOS) e Google Play Store (para dispositivos Android).</li>
-          <li>A renovação da assinatura é automática, salvo se o usuário cancelar pelo próprio sistema da Apple ou Google antes da próxima cobrança.</li>
-          <li>O Otto não realiza cobranças diretas e não tem acesso a informações de pagamento do usuário.</li>
+          <li>Otto ofrece funcionalidades mediante suscripción in-app.</li>
+          <li>El usuario tiene derecho a un periodo de prueba de 2 (dos) meses desde la fecha de registro, tras el cual será necesaria la suscripción.</li>
+          <li>Las suscripciones son procesadas y gestionadas directamente por Apple App Store (iOS) y Google Play Store (Android).</li>
+          <li>La renovación de la suscripción es automática, salvo que el usuario la cancele a través de Apple o Google antes de la próxima facturación.</li>
+          <li>Otto no realiza cobros directos y no tiene acceso a la información de pago del usuario.</li>
         </ul>
       </section>
 
-      <section id="cancelamento">
-        <h2>4. Política de Cancelamento</h2>
-        <p>O usuário pode cancelar sua assinatura a qualquer momento nas configurações da App Store ou Google Play. O cancelamento não implica reembolso de valores já cobrados, salvo disposição em contrário das lojas.</p>
+      <section id="cancelacion">
+        <h2>4. Política de Cancelación</h2>
+        <p>El usuario puede cancelar su suscripción en cualquier momento desde la configuración de App Store o Google Play. La cancelación no implica reembolso de pagos ya realizados, salvo disposición contraria de las tiendas.</p>
       </section>
 
-      <section id="privacidade">
-        <h2>5. Privacidade e Dados Pessoais</h2>
+      <section id="privacidad">
+        <h2>5. Privacidad y Datos Personales</h2>
         <ul>
-          <li>O Otto coleta apenas nome, e-mail e senha para criar e gerenciar a conta do usuário.</li>
-          <li>O app não utiliza rastreamento, nem acessa câmera ou localização do dispositivo.</li>
-          <li>Os dados são tratados conforme nossa Política de Privacidade.</li>
+          <li>Otto solo recopila nombre, correo electrónico y contraseña para crear y gestionar la cuenta del usuario.</li>
+          <li>La aplicación no realiza seguimiento, ni accede a la cámara o ubicación del dispositivo.</li>
+          <li>Los datos se tratan conforme a nuestra Política de Privacidad.</li>
         </ul>
       </section>
 
-      <section id="direitos-e-responsabilidades">
-        <h2>6. Direitos e Responsabilidades</h2>
+      <section id="derechos-y-responsabilidades">
+        <h2>6. Derechos y Responsabilidades</h2>
         <ul>
-          <li>O usuário compromete-se a utilizar o Otto de forma lícita e em conformidade com estes Termos.</li>
-          <li>É proibido usar o aplicativo para atividades ilegais, abusivas ou que possam comprometer o funcionamento do serviço.</li>
-          <li>O Otto se reserva o direito de suspender ou encerrar contas que violem estes Termos.</li>
+          <li>El usuario se compromete a usar Otto de manera legal y conforme a estos Términos.</li>
+          <li>Está prohibido usar la aplicación para actividades ilegales, abusivas o que puedan comprometer el funcionamiento del servicio.</li>
+          <li>Otto se reserva el derecho de suspender o cerrar cuentas que violen estos Términos.</li>
         </ul>
       </section>
 
-      <section id="limitacao-de-responsabilidade">
-        <h2>7. Limitação de Responsabilidade</h2>
-        <p>O Otto é fornecido “no estado em que se encontra”. Não garantimos funcionamento ininterrupto ou livre de erros. Na máxima medida permitida por lei, não nos responsabilizamos por danos decorrentes do uso ou impossibilidade de uso do aplicativo.</p>
+      <section id="limitacion-de-responsabilidad">
+        <h2>7. Limitación de Responsabilidad</h2>
+        <p>Otto se proporciona “tal como está”. No garantizamos funcionamiento ininterrumpido ni libre de errores. En la máxima medida permitida por la ley, no nos hacemos responsables por daños derivados del uso o imposibilidad de uso de la aplicación.</p>
       </section>
 
-      <section id="alteracoes">
-        <h2>8. Alterações nos Termos</h2>
-        <p>Podemos atualizar estes Termos de Uso periodicamente. Caso haja mudanças relevantes, notificaremos os usuários por meio do aplicativo ou do e-mail cadastrado.</p>
+      <section id="cambios">
+        <h2>8. Cambios en los Términos</h2>
+        <p>Podemos actualizar estos Términos de Servicio periódicamente. En caso de cambios relevantes, notificaremos a los usuarios mediante la aplicación o el correo electrónico registrado.</p>
       </section>
 
-      <section id="legislacao-aplicavel">
-        <h2>9. Legislação Aplicável</h2>
-        <p>Estes Termos são regidos exclusivamente pela legislação da República Federativa do Brasil.</p>
+      <section id="legislacion-aplicable">
+        <h2>9. Legislación Aplicable</h2>
+        <p>Estos Términos se rigen exclusivamente por la legislación de la República Federativa del Brasil.</p>
       </section>
 
-      <section id="responsavel-e-contato">
-        <h2>10. Responsável e Contato</h2>
-        <p>O Otto é de responsabilidade de pessoa física.<br/>
-        Para dúvidas ou solicitações relacionadas a estes Termos, entre em contato pelo e-mail: <a href="mailto:otto.fliper.studios@gmail.com">otto.fliper.studios@gmail.com</a></p>
+      <section id="contacto">
+        <h2>10. Responsable y Contacto</h2>
+        <p>Otto es responsabilidad de una persona física.<br/>
+        Para dudas o solicitudes relacionadas con estos Términos, contacte a: <a href="mailto:otto.fliper.studios@gmail.com">otto.fliper.studios@gmail.com</a></p>
       </section>
 
       <hr style="border: 0; border-top: 1px solid var(--border); margin: 20px 0;" />
 
-      <p class="muted">Última atualização: 24 de agosto de 2025</p>
+      <p class="muted">Última actualización: 24 de agosto de 2025</p>
     </article>
   </main>
 
   <footer>
-    © Otto — Termos de Uso
+    © Otto — Términos de Servicio
   </footer>
 </body>
 </html>
