--- a/otto/privacypolicy/es/index.html
+++ b/otto/privacypolicy/es/index.html
@@ -168,7 +168,7 @@
   </main>
 
   <footer>
-    © Otto — Política de Privacidad
+    © Lucas Siqueira — Política de Privacidad
   </footer>
 </body>
 </html>
