--- a/otto/privacypolicy/pt/index.html
+++ b/otto/privacypolicy/pt/index.html
@@ -168,7 +168,7 @@
   </main>
 
   <footer>
-    © Otto — Política de Privacidade
+    © Lucas Siqueira — Política de Privacidade
   </footer>
 </body>
 </html>
