--- a/otto/termsofservice/es/index.html
+++ b/otto/termsofservice/es/index.html
@@ -164,7 +164,7 @@
   </main>
 
   <footer>
-    © Otto — Términos de Servicio
+    © Lucas Siqueira — Términos de Servicio
   </footer>
 </body>
 </html>
