--- a/otto/index.html
+++ b/otto/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=termsofservice/">
+  <meta http-equiv="refresh" content="0; url=support/">
 </head>
 <body>
 </body>
