feat: Delete account info

--- a/otto/support/en/index.html
+++ b/otto/support/en/index.html
@@ -130,6 +130,12 @@
           <h3>How do I cancel my subscription?</h3>
           <p>Subscriptions are managed by the user via the device’s App Store (iOS) or Google Play Store (Android) settings.</p>
         </div>
+        
+        <div class="faq-item">
+          <h3>How do I delete my account?</h3>
+          <p>To delete your account, open the app, go to your profile, click “Manage Account”, and then select “Delete Account”.  
+          Path: <strong>Profile &gt; Manage Account &gt; Delete Account</strong></p>
+        </div>
 
       </section>
     </article>
