--- a/otto/support/es/index.html
+++ b/otto/support/es/index.html
@@ -94,6 +94,12 @@
           <h3>¿Cómo cancelar mi suscripción?</h3>
           <p>Las suscripciones son gestionadas por el usuario a través de la App Store (iOS) o Google Play Store (Android).</p>
         </div>
+        
+        <div class="faq-item">
+          <h3>¿Cómo eliminar mi cuenta?</h3>
+          <p>Para eliminar tu cuenta, abre la app, ve a tu perfil, haz clic en “Gestionar cuenta” y luego selecciona “Eliminar cuenta”.  
+          Ruta: <strong>Perfil &gt; Gestionar cuenta &gt; Eliminar cuenta</strong></p>
+        </div>
 
       </section>
     </article>
