--- a/otto/support/pt/index.html
+++ b/otto/support/pt/index.html
@@ -95,7 +95,14 @@
           <p>As assinaturas são gerenciadas pelo usuário através das configurações da App Store (iOS) ou Google Play Store (Android).</p>
         </div>
 
+        <div class="faq-item">
+          <h3>Como excluir minha conta?</h3>
+          <p>Para excluir a conta, acesse o app, vá até o perfil, clique em “Gerenciar conta” e depois em “Excluir conta”.  
+          Caminho: <strong>Perfil &gt; Gerenciar conta &gt; Excluir conta</strong></p>
+        </div>
+
       </section>
+
     </article>
   </main>
 
