--- a/otto/termsofservice/en/index.html
+++ b/otto/termsofservice/en/index.html
@@ -102,14 +102,16 @@
         </ul>
       </section>
 
-      <section id="subscriptions-payments">
-        <h2>3. Subscriptions, Free Trial and Payments</h2>
+      <section id="subscriptions-and-payments">
+        <h2>3. Subscriptions, Free Trial, and Payments</h2>
         <ul>
-          <li>Otto provides certain features through in-app subscriptions.</li>
-          <li>Users are entitled to a 2-month free trial starting from the registration date, after which a subscription will be required.</li>
+          <li>Otto offers features through an in-app subscription called <strong>Otto Premium</strong>.</li>
+          <li>Users are entitled to a free trial period of 2 (two) months from the date of registration, after which a subscription is required.</li>
+          <li>The subscription has a monthly duration (<strong>1 month</strong>).</li>
+          <li>The subscription price is <strong>US$ 0.99 (ninety-nine cents)</strong>.</li>
           <li>Subscriptions are processed and managed directly by the Apple App Store (for iOS devices) and Google Play Store (for Android devices).</li>
-          <li>Subscriptions renew automatically unless canceled by the user through Apple or Google before the next billing date.</li>
-          <li>Otto does not charge users directly and does not have access to their payment information.</li>
+          <li>The subscription automatically renews unless the user cancels through Apple or Google before the next billing cycle.</li>
+          <li>Otto does not process direct charges and does not have access to users’ payment information.</li>
         </ul>
       </section>
 
