--- a/otto/termsofservice/es/index.html
+++ b/otto/termsofservice/es/index.html
@@ -103,12 +103,14 @@
       </section>
 
       <section id="suscripciones-y-pagos">
-        <h2>3. Suscripciones, Periodo de Prueba y Pagos</h2>
+        <h2>3. Suscripciones, Período de Prueba y Pagos</h2>
         <ul>
-          <li>Otto ofrece funcionalidades mediante suscripción in-app.</li>
-          <li>El usuario tiene derecho a un periodo de prueba de 2 (dos) meses desde la fecha de registro, tras el cual será necesaria la suscripción.</li>
-          <li>Las suscripciones son procesadas y gestionadas directamente por Apple App Store (iOS) y Google Play Store (Android).</li>
-          <li>La renovación de la suscripción es automática, salvo que el usuario la cancele a través de Apple o Google antes de la próxima facturación.</li>
+          <li>Otto ofrece funcionalidades mediante una suscripción in-app llamada <strong>Otto Premium</strong>.</li>
+          <li>El usuario tiene derecho a un período de prueba gratuito de 2 (dos) meses desde la fecha de registro, después del cual será necesario contratar la suscripción.</li>
+          <li>La suscripción tiene una duración mensual (<strong>1 mes</strong>).</li>
+          <li>El precio de la suscripción es de <strong>US$ 0.99 (noventa y nueve centavos)</strong>.</li>
+          <li>Las suscripciones son procesadas y administradas directamente por la Apple App Store (para dispositivos iOS) y Google Play Store (para dispositivos Android).</li>
+          <li>La renovación de la suscripción es automática, a menos que el usuario la cancele a través de Apple o Google antes de la próxima facturación.</li>
           <li>Otto no realiza cobros directos y no tiene acceso a la información de pago del usuario.</li>
         </ul>
       </section>
