--- a/otto/termsofservice/pt/index.html
+++ b/otto/termsofservice/pt/index.html
@@ -105,13 +105,16 @@
       <section id="assinaturas-e-pagamentos">
         <h2>3. Assinaturas, Período Gratuito e Pagamentos</h2>
         <ul>
-          <li>O Otto oferece funcionalidades mediante assinatura in-app.</li>
+          <li>O Otto oferece funcionalidades mediante assinatura in-app denominada <strong>Otto Premium</strong>.</li>
           <li>O usuário tem direito a um período gratuito de 2 (dois) meses a partir da data de registro, após o qual será necessária a contratação da assinatura.</li>
+          <li>A assinatura possui duração mensal (<strong>1 mês</strong>).</li>
+          <li>O valor da assinatura é de <strong>R$ 4,90 (quatro reais e noventa centavos)</strong>.</li>
           <li>As assinaturas são processadas e gerenciadas diretamente pela Apple App Store (para dispositivos iOS) e Google Play Store (para dispositivos Android).</li>
           <li>A renovação da assinatura é automática, salvo se o usuário cancelar pelo próprio sistema da Apple ou Google antes da próxima cobrança.</li>
           <li>O Otto não realiza cobranças diretas e não tem acesso a informações de pagamento do usuário.</li>
         </ul>
       </section>
+
 
       <section id="cancelamento">
         <h2>4. Política de Cancelamento</h2>
