refactor: change ios link

--- a/otto/app/index.html
+++ b/otto/app/index.html
@@ -9,7 +9,7 @@
       var userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
       // Links das lojas - substitua pelos do seu app
-      var iosLink = "https://apps.apple.com/app/id6749043439";
+      var iosLink = "https://apps.apple.com/us/app/otto-expense-tracker/id6749043439";
       var androidLink = "https://play.google.com/store/apps/details?id=com.fs.otto_app";
 
       if (/iPad|iPhone|iPod|Macintosh/.test(userAgent) && !window.MSStream) {
